log
Thu 07 Sep 2023 07:18:10 PM UTC: 
 tests:  0|6
total_score: 0/70
d043dfe
Thu 07 Sep 2023 07:28:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:21: error: ‘HashMapMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   56 |     HashMap* map = (HashMapMap*)malloc(sizeof(HashMap));
      |                     ^~~~~~~~~~
      |                     HashMap
hashmap.c:56:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:32: error: expected expression before ‘)’ token
   56 |     HashMap* map = (HashMapMap*)malloc(sizeof(HashMap));
      |                                ^
hashmap.c:56:14: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |     HashMap* map = (HashMapMap*)malloc(sizeof(HashMap));
      |              ^~~
hashmap.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2c4934c
Thu 07 Sep 2023 07:30:34 PM UTC: 
 hashmap.c | 45 +++++++++++++++------------------------------
 1 file changed, 15 insertions(+), 30 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3a6eabe
Thu 07 Sep 2023 07:41:02 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1b68988
Thu 07 Sep 2023 07:43:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:26: error: expected expression before ‘)’ token
   60 |   map->buckets = (modf **)malloc(sizeof(Node));
      |                          ^
hashmap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
126a9a0
Thu 07 Sep 2023 07:44:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b17d62f
Thu 07 Sep 2023 07:48:59 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4e17231
Thu 07 Sep 2023 07:51:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
932773a
Thu 07 Sep 2023 07:52:18 PM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
3cb0037
Thu 07 Sep 2023 08:00:36 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:7: error: unused variable ‘i’ [-Werror=unused-variable]
   47 |   int i = hash(key, map->capacity);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
4e3f855
